--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.7.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "web-vitals": "^2.1.4",
-    "prop-types": "^15.8.1",
-    "react-router-dom": "^6.2.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.2.1",
+    "redux-persist": "^6.0.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.2.3"
   },
   "scripts": {
