--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "vite-plugin-eslint": "^1.8.1",
     "web-vitals": "^4.2.2"
