--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-VITE_SERVER_URL=http://localhost:8000/
+VITE_SERVER_URL=http://3.34.189.195:8000/
 
 USER_NAME=admin_username
 USER_PASSWORD=admin_password
