--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "nepali-calendar-react": "^1.0.3",
     "nepali-date-picker": "^2.0.2",
+    "nepali-datepicker-reactjs": "^1.1.7",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-nepali-calendar": "^1.1.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
@@ -55,4 +58,7 @@
       "last 1 safari version"
     ]
   }
+  
+  
+
 }
