--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
+    "react-intersection-observer": "^9.13.0",
     "react-nepali-calendar": "^1.1.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
