--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.3",
+    "framer-motion": "^11.3.28",
     "nepali-calendar-react": "^1.0.3",
     "nepali-date": "^0.1.3",
     "nepali-date-picker": "^2.0.2",
